# Quake3e

./: CMakeLists.txt  CMakePresets.json  azure-pipelines.yml  mingw-build.sh
code/botlib/: CMakeLists.txt
code/client/: CMakeLists.txt  cl_console.c  cl_keys.c  client.h
code/libjpeg/: CMakeLists.txt
code/libogg/: CMakeLists.txt
code/libvorbis/: CMakeLists.txt
code/qcommon/: CMakeLists.txt  cmd.c  common.c  history.c  q_shared.h  qcommon.h
code/renderer/: CMakeLists.txt
code/renderercommon/: CMakeLists.txt
code/sdl/: CMakeLists.txt
code/server/: CMakeLists.txt
code/unix/: CMakeLists.txt  unix_main.c
code/win32/: win_wndproc.c
